--- a/index.html
+++ b/index.html
@@ -364,8 +364,7 @@
     </div>
   </div>
 </section>
-
-   <!-- CONTACT -->
+    <!-- CONTACT -->
     <section id="contact" class="contact">
         <div class="container">
             <div class="section-header">
@@ -398,16 +397,19 @@
                 </div>
                 
                 <form class="contact-form" action="https://formspree.io/f/xjkoajdp" method="POST">
+                    <input type="hidden" name="_subject" value="New contact form submission">
+                    <input type="hidden" name="_replyto" value="">
+                    
                     <div class="form-group">
                         <input type="text" name="name" placeholder="Your Name" required>
                         <i class="fas fa-user"></i>
                     </div>
                     <div class="form-group">
-                        <input type="email" name="email" placeholder="Your Email" required>
+                        <input type="email" name="_replyto" placeholder="Your Email" required>
                         <i class="fas fa-envelope"></i>
                     </div>
                     <div class="form-group">
-                        <input type="text" name="subject" placeholder="Subject" required>
+                        <input type="text" name="_subject" placeholder="Subject" required>
                         <i class="fas fa-tag"></i>
                     </div>
                     <div class="form-group">
@@ -421,7 +423,7 @@
                 </form>
             </div>
         </div>
-    </section>
+    </section>S
 <!-- FOOTER -->
 <footer>
   <div class="container">
