Update the logo

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <nav>
     <div class="logo-container">
       <div class="logo-wrapper">
-        <img src="images\Huda_Teclogo.webp" alt="TechnoHuda Logo" class="logo">
+        <img src="images\HuTech.png" alt="TechnoHuda Logo" class="logo">
         <div class="logo-glow"></div>
       </div>
       <span class="site-name">TechnoHuda</span>
@@ -421,7 +421,7 @@
                 </form>
             </div>
         </div>
-    </section>S
+    </section>
 <!-- FOOTER -->
 <footer>
   <div class="container">
