Update css on phone 0

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <nav>
     <div class="logo-container">
       <div class="logo-wrapper">
-        <img src="images\HuTech.png" alt="TechnoHuda Logo" class="logo">
+        <img src="images\Techu.webp" alt="TechnoHuda Logo" class="logo">
         <div class="logo-glow"></div>
       </div>
       <span class="site-name">TechnoHuda</span>
