--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <nav>
     <div class="logo-container">
       <div class="logo-wrapper">
-        <svg class="logo" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+        <svg class="logo" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">ss
           <defs>
             <linearGradient id="logoGradient" x1="0%" y1="0%" x2="100%" y2="100%">
               <stop offset="0%" style="stop-color:#ff8ac6;stop-opacity:1" />
