--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
             </linearGradient>
           </defs>
           <circle cx="50" cy="50" r="45" fill="url(#logoGradient)" opacity="0.1"/>
-          <path d="M30 25 L70 25 L70 35 L40 35 L40 45 L65 45 L65 55 L40 55 L40 75 L30 75 Z" fill="url(#logoGradient)"/>
+          <path d="M15 25 L25 25 L25 40 L35 40 L35 25 L45 25 L45 75 L35 75 L35 50 L25 50 L25 75 L15 75 Z" fill="url(#logoGradient)"/>
           <circle cx="75" cy="65" r="8" fill="url(#logoGradient)"/>
         </svg>
         <div class="logo-glow"></div>
       </div>
-      <span class="site-name">FaydaTechs</span>
+      <span class="site-name">HudTechs</span>
     </div>
     <ul class="nav-menu">
       <li><a href="#about"><i class="fas fa-user"></i> About</a></li>
