--- a/index.html
+++ b/index.html
@@ -385,6 +385,8 @@
             <div class="contact-content">
                 <div class="contact-info">
                     <h3>Let's Create Something Amazing Together!</h3>
+                    <p>I'm always excited to connect with fellow developers, potential collaborators, and anyone passionate about technology. Whether you have a project idea, want to discuss tech trends, or just want to say hello, I'd love to hear from you!</p>
+                    
                     <div class="contact-methods">
                         <div class="contact-method">
                             <i class="fas fa-envelope"></i>
@@ -432,7 +434,7 @@
                 </form>
             </div>
         </div>
-    </section>
+    </section>s
 <!-- FOOTER -->
 <footer>
   <div class="container">
