Update logo and name

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </svg>
         <div class="logo-glow"></div>
       </div>
-      <span class="site-name">HudTechs</span>
+      <span class="site-name">HudTech</span>
     </div>
     <ul class="nav-menu">
       <li><a href="#about"><i class="fas fa-user"></i> About</a></li>
