--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </svg>
         <div class="logo-glow"></div>
       </div>
-      <span class="site-name">HudTech</span>
+      <span class="site-name">HudaTech</span>
     </div>
     <ul class="nav-menu">
       <li><a href="#about"><i class="fas fa-user"></i> About</a></li>
@@ -73,7 +73,7 @@
         <span>Hello, I'm</span>
       </div>
       <h1 class="name-animation">
-        <span class="highlight glitch">Huda Alkoud</span>
+        <span class="highlight glitch">Huda</span>
       </h1>
       <div class="typing-container">
         <span class="typed-text"></span>
@@ -93,7 +93,7 @@
     </div>
     <div class="hero-visual">
       <div class="floating-code">
-        <div class="code-line">&lt;HudaAlkoud /&gt;</div>
+        <div class="code-line">&lt;Huda/&gt;</div>
         <div class="code-line">const passion = "coding";</div>
         <div class="code-line">while(learning) { grow(); }</div>
       </div>
